# hong-ik

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  sanitizers.yml  wasm-publish.yml
analyzer/: analyzer.cpp  analyzer.h  symbol_collector.cpp  symbol_collector.h  type_checker.cpp  type_checker.h  type_checker_class.cpp  type_checker_expr.cpp  type_checker_util.h
ast/: expressions.h  literals.h  node.h  program.h  statements.h
benchmarks/: README.md  main.cpp  runner.cpp  runner.h
benchmarks/reference/: arith_loop.py  array_ops.py  builtin_calls.py  class_method.py  fib_recursive.py  hashmap_ops.py  string_concat.py  string_index.py
benchmarks/scenarios/: arith_loop.hik  array_ops.hik  builtin_calls.hik  class_method.hik  fib_recursive.hik  hashmap_ops.hik  string_concat.hik  string_index.hik
build-wasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/benchmarks/: 2026-07-08-baseline.json  2026-07-08-baseline.md  2026-07-10-baseline-control.json  2026-07-10-cycle1.json  2026-07-10-cycle1.md
docs/superpowers/plans/: 2026-03-31-vm-parity.md  2026-04-01-vm-optimization-layer1.md  2026-05-10-hong-ik-phase-0-safety-net.md  2026-05-17-builtin-cpp-split.md  2026-05-17-vm-cpp-phase2-1-extract.md  2026-05-19-static-type-system-phase-a.md  2026-06-11-static-type-system-phase-b1.md  2026-06-11-static-type-system-phase-b2.md  2026-06-12-runtime-consistency.md  2026-07-07-lsp-server-v1.md  2026-07-08-benchmark-suite.md  2026-07-10-vm-optimization-cycle1.md
docs/superpowers/specs/: 2026-03-31-vm-parity-design.md  2026-04-01-type-system-design.md  2026-04-01-vm-optimization-design.md  2026-05-10-hong-ik-structure-refactor-design.md  2026-05-17-cpp-giant-file-split-design.md  2026-05-17-vm-cpp-split-phase2-1-design.md  2026-05-19-static-type-system-design.md  2026-06-11-static-type-system-phase-b-design.md  2026-06-12-runtime-consistency-design.md  2026-07-07-lsp-server-v1-design.md  2026-07-08-benchmark-suite-design.md  2026-07-10-vm-optimization-cycle1-design.md
environment/: environment.cpp  environment.h
error/: hongik_error.cpp  hongik_error.h
evaluator/: evaluator.cpp  evaluator.h
exception/: exception.h
io/: io_interface.cpp  io_interface.h
lexer/: lexer.cpp  lexer.h
lsp/: document_store.cpp  document_store.h  jsonrpc.cpp  jsonrpc.h  main.cpp  position.cpp  position.h  server.cpp  server.h
lsp/features/: completion.cpp  completion.h  definition.cpp  definition.h  diagnostics.cpp  diagnostics.h  hover.cpp  hover.h  symbols.cpp  symbols.h
object/: built_in.cpp  built_in.h  builtin_registry.cpp  builtin_registry.h  builtin_signatures.h  object.h  object_type.h
object/builtins/: array.cpp  collection.cpp  conversion.cpp  io.cpp  json.cpp  math.cpp  string.cpp
parser/: parser.cpp  parser.h
repl/: repl.cpp  repl.h
sandbox/: execution_limiter.h
scripts/: build-wasm.sh
tests/: benchmark.cpp  benchmark_scenarios_test.cpp  evaluator_test.cpp  golden_test.cpp  lexer_test.cpp  lsp_document_store_test.cpp  lsp_jsonrpc_test.cpp  lsp_position_test.cpp  lsp_server_test.cpp  parser_diagnostics_test.cpp  parser_test.cpp  peephole_test.cpp  repl_test.cpp  symbol_collector_test.cpp  type_checker_test.cpp  utf8_converter_test.cpp  vm_test.cpp  web_module_test.cpp
tests/fixtures/golden/: arith_basic.expected.txt  arith_basic.hik  binary_strict.expected.txt  binary_strict.hik  block_scope.expected.txt  block_scope.hik  builtins.hik  classes_basic.expected.txt  classes_basic.hik  closures.expected.txt  closures.hik  decl_check.expected.txt  decl_check.hik  error_undefined.expected.txt  error_undefined.hik  for_each.expected.txt  for_each.hik  foreach_strict.expected.txt  foreach_strict.hik  func_recursion.hik  if_else.expected.txt  if_else.hik  logical_bool.expected.txt  logical_bool.hik  loops_break.hik  ops_misc.expected.txt  ops_misc.hik  range_strict.expected.txt  range_strict.hik  string_compare.hik  subtype_assign.expected.txt  subtype_assign.hik  try_catch.expected.txt  try_catch.hik  utf8_strings.expected.txt  utf8_strings.hik  vars_types.expected.txt  vars_types.hik
token/: token.cpp  token.h  token_type.h
utf8_converter/: utf8_converter.cpp  utf8_converter.h
util/: json_util.h  token_utils.h  type.cpp  type.h  type_utils.h  utf8_utils.h
vm/: chunk.h  compiler.cpp  compiler.h  compiler_expr.cpp  compiler_stmt.cpp  opcode.h  peephole.cpp  peephole.h  vm.cpp  vm.h  vm_handlers.cpp  vm_internal.h  vm_value.h
vscode-extension/: DEVELOPMENT.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: hongik.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: hongik.tmLanguage.json
web/: bindings.cpp  memory_filesystem.h  wasm_interface.cpp  wasm_interface.h
